changed gfc version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ set(ANTLR4_LIBRARIES                  antlr4-runtime)
 ##                                   gfc                                      ##
 ##                                                                            ##
 ################################################################################
-set(GFC_DIR                           "${LIBCLIX_DIR}/3rd/gfc")
+set(GFC_DIR                           "${LIBCLIX_DIR}/3rd/gfc-0.1.2")
 set(GFC_INCLUDE_DIR                   "${GFC_DIR}/include")
 set(GFC_LIBRARY_DIR                   "${GFC_DIR}/${BUILD}")
 set(GFC_LIBRARIES                     gfc)
